# ROSDeploymentExample

./: README.md
ROSDeploymentExample/: .project  representations.aird
ROSDeploymentExample/msgs/: moveit_skills.ros
ROSDeploymentExample/plan/: pick_and_place_ur5e_cell.planros
ROSDeploymentExample/rosnodes/: controller_manager.ros2  io_and_status_controller.ros2  joint_state_broadcaster.ros2  lifecycle_manager.ros2  man2_bt_operator.ros2  moveit_config_server.ros2  moveit_skill_server.ros2  realsense2_camera.ros2  robot_state_publisher.ros2  set_moveit_path_constrains.ros2  ur_io_control_gripper_skill_server.ros2  ur_robot_driver_controller_stopper.ros2  ur_robot_driver_dashboard_client.ros2  ur_robot_driver_urscript_interface.ros2  ur_ros2_control_node.ros2
ROSDeploymentExample/rossystem/: ur_applications.rossystem
ROSDeploymentExample/src-gen/aruco_marker_detection_skill_server/: CMakeLists.txt  README.md  package.xml  setup.py
ROSDeploymentExample/src-gen/bt_manipulation_framwork_core/: CMakeLists.txt  README.md  package.xml  setup.py
ROSDeploymentExample/src-gen/ur_applications/: CMakeLists.txt  README.md  package.xml  setup.py
ROSDeploymentExample/src-gen/ur_applications/launch/: .gitignore  ur_applications.launch.py
ROSDeploymentExample/src-gen/ur_applications/resource/: .gitignore  ur_applications.puml
ROSDeploymentExample/subsystem/: aruco_marker_detection_skill.rossystem  bt_core.rossystem  control_ur_gripper_io.rossystem  moveit_skill.rossystem  realsense_camera_calibrated.rossystem  ur_control.rossystem
(+56 files in other folders)
