<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>ur_applications</name>
 <version>0.0.1</version>
 <description>This package provides launch file for operating ur_applications</description>
  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>
  <author email="jane.doe@example.com">Jane Doe</author>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>bt_manipulation_framwork_core</exec_depend>
    <exec_depend>aruco_marker_detection_skill_server</exec_depend>
    <exec_depend>moveit_skill_server</exec_depend>
    <exec_depend>control_ur_gripper_via_io_skill</exec_depend>
    <exec_depend>realsense_camera_calibrated</exec_depend>
    <exec_depend>ur_robot_driver</exec_depend>
  <!--test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>python3-pytest</test_depend-->

  <export>
  	<build_type>ament_python</build_type>
  </export>
</package>
